# clouddeploy

./: .gitignore  README.md  clouddeploy.yaml.example  pyproject.toml  render.yaml
clouddeploy/: config.py  main.py
clouddeploy/commands/: deploy.py  init.py  logs.py  rollback.py  status.py
clouddeploy/providers/: __init__.py  docker_provider.py
server/: .env.example  Dockerfile  fly.toml  main.py  requirements.txt
server/core/: auth.py  config.py  database.py
server/models/: __init__.py  deployment.py  user.py
server/routers/: auth.py  deployments.py
tests/: test_commands.py
